# safepup

./: .gitignore  .oxlintrc.json  .prettierignore  Cargo.toml  biome.json  biome.jsonc  gleam.toml  justfile  manifest.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts
client/: .prettierignore  astro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
client/components/: Form.tsx
client/src/pages/: index.astro
crates/server/: Cargo.toml
crates/server/src/: main.rs
server/: manifest.toml
server/src/: safepup.gleam
server/src/safepup/: router.gleam
src/: safepup.gleam
src/safepup/: router.gleam
