[package]
name = "safepup-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", default-features = false, features = [
    "http1",
    "http2",
    "json",
    "query",
    "tokio",
    "tower-log",
    "tracing",
] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
